@@ -7176,15 +7176,14 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 	    The configuration variables <literal><link
 	    linkend='configPackage-Display-Format'>Aptitude::UI::Package-Display-Format</link></literal>,
 	    <literal><link
-	    linkend='configPackage-Status-Format'>Aptitude::UI::Package-Status-Format</link></literal>,
+	    linkend='configPackage-Header-Format'>Aptitude::UI::Package-Header-Format</link></literal>,
 	    and <literal><link
-	    linkend='configPackage-Header-Format'>Aptitude::UI::Package-Header-Format</link></literal>
-	    define the default formats the package list, the header at
-	    the top of the package list, and the status line below the
-	    package list respectively.  To change how the results of
-	    an <literal><link linkend='cmdlineSearch'>aptitude
-	    search</link></literal> command are displayed, use the
-	    <literal><link
+	    linkend='configPackage-Status-Format'>Aptitude::UI::Package-Status-Format</link></literal>
+	    define the default formats the package list, the header at the top
+	    of the package list, and the status line below the package list
+	    respectively.  To change how the results of an <literal><link
+	    linkend='cmdlineSearch'>aptitude search</link></literal> command are
+	    displayed, use the <literal><link
 	    linkend='cmdlineOptionFormat'>-F</link></literal> option.
 	  </para>
 
