@@ -42,6 +42,10 @@ Version 0.7.1 UNRELASED
 
     * Generate 'alt' tag for images in HTML documentation (see #496724)
 
+    * In "Customizing the package list", fix order of variables
+      ::UI::Package-Status-Format and ::UI::Package-Header-Format and their
+      explanations
+
 - User visible changes:
 
   * Slightly change description of shortcut 'g' in title bar (Closes: #247487)
